# issue-triage-orchestrator

./: .env.example  .gitignore  LLM_INTEGRATION.md  Makefile  README.md  design_notes.md  docker-compose.yml  pyproject.toml
apps/orchestrator/: Dockerfile  main.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/.next/: trace
apps/web/.next/server/: _error.js
apps/web/.next/server/pages/: _app.js  _error.js  index.js
apps/web/.next/server/vendor-chunks/: @swc.js  next.js
apps/web/.next/static/chunks/: _error.js  webpack.js
apps/web/.next/static/webpack/: 44e121cbebd7f4b4.webpack.hot-update.json  webpack.0016f171b4f48bf5.hot-update.js  webpack.44e121cbebd7f4b4.hot-update.js
apps/web/pages/: index.tsx
apps/web/styles/: globals.css
metrics/: metrics.json  step_logs.json
sample_runs/run-1-20251108T153248/: metrics.json  response.json
sample_runs/run-1-20251108T153248/_dry_prs/pr_81c52c5f/: meta.json
sample_runs/run-1-20251109T111626/: metrics.json  response.json
sample_runs/run-1-20251117T194700/: metrics.json  response.json
sample_runs/run-1-20251117T194700/_dry_prs/pr_32d62519/: meta.json
sample_runs/run-2-20251108T153249/: response.json
sample_runs/run-2-20251108T153249/_dry_prs/pr_1a0ce3de/: meta.json
sample_runs/run-2-20251109T111627/: response.json
sample_runs/run-2-20251117T194729/: metrics.json  response.json
sample_runs/run-3-20251108T153249/: response.json
sample_runs/run-3-20251109T111628/: response.json
sample_runs/run-3-20251117T194756/: metrics.json  response.json
scripts/: run_llm_demo.py  run_sample_runs.sh
tests/: test_api.py  test_harness.py  test_pr_flow.py  test_reliability.py
(+11 files in other folders)
